# avito

./: READMY.md  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
avito/: settings.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selections/: selection_create_test.py
users/: models.py  serializers.py  urls.py
